Créer un template html pour definir la structure de la page takeout

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -12,9 +12,9 @@
         <h1 class="d-flex justify-content-center">Outils de gestion d'inventaire</h1>
         <div class="p-lg-5 h-100 d-flex align-items-center justify-content-center" id="maindiv" style="margin-top: 100px;">
             <a href="{{ url_for('inventory_out_page') }}">
-                <button type="button" class="btn btn-primary d-inline mx-5">Borrow Items</button>
+                <button type="button" class="btn btn-primary d-inline mx-5">Emprunter Items</button>
             </a>
-            <button type="button" class="btn btn-primary d-inline mx-5">Return Items</button>
+            <button type="button" class="btn btn-primary d-inline mx-5">Returner Items</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
