--- a/templates/inventoryOut/index.html
+++ b/templates/inventoryOut/index.html
@@ -7,8 +7,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container mt-5">
-        <p>Out inventory Page</p>
+    <h1 class="d-flex justify-content-center mt-5">Sorti de l'inventaire</h1>
+    <div class="d-flex justify-content-center">
+      <button type="button" class="btn btn-success">Emprunter Items</button>
+    </div>
+    <div class="mx-2 mt-2 row">
+        <!-- list of items -->
+        <div class="col">
+          <div class="card mt-2">
+            <div class="card-body">
+              <div class="d-flex">
+                <h3 class="card-title d-inline">Clé Anglaise 18</h3>
+                <p class="card-title d-inline" style="margin-left: auto;">Emprunté: 1</p>
+              </div>
+              <button class="btn btn-danger btn-large">Remove</button>
+            </div>
+          </div>
+          <div class="card mt-2">
+            <div class="card-body">
+              <div class="d-flex">
+                <h3 class="card-title d-inline">Vis</h3>
+                <p class="card-title d-inline" style="margin-left: auto;">Emprunté: 5</p>
+              </div>
+              <button class="btn btn-danger btn-large">Remove</button>
+            </div>
+          </div>
+          <div class="card mt-2">
+            <div class="card-body">
+              <div class="d-flex">
+                <h3 class="card-title d-inline">Boulon</h3>
+                <p class="card-title d-inline" style="margin-left: auto;">Emprunté: 5</p>
+              </div>
+              <button class="btn btn-danger btn-large">Remove</button>
+            </div>
+          </div>
+        </div>
+        <!-- item description -->
+        <div class="col">
+          <div class="card mt-2" style="height: 500px;">
+            <div class="card-body">
+              <h3 class="card-title">Clé Anglaise 18</h3>
+              <p class="card-text">Description: Clé Anglaise 18</p>
+              <p class="card-text">Inventaire: 10</p>
+
+            </div>
+          </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
